# gperftools

./: .bazelrc  .clang-format  .clangd  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD  BUILD.bazel  CMakeLists.txt  COPYING  ChangeLog  INSTALL  MODULE.bazel  Makefile.am  Makefile.in  NEWS  README  README.MD  README.md  README.windows  README_windows.txt  TODO  aclocal.m4  autogen.sh  config.guess  configure  configure.ac  cpuprofile-fileformat.html  gen_compile_commands.rb  google-perftools.sln  gperftools.sln  heap_checker.html  heapprofile.html  index.html  ltmain.sh  pprof_remote_servers.html  tcmalloc.html
.bcr/: README.md  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: bazel-ci.yml  ci.yml  github-pages.yml  publish-to-bcr.yml
benchmark/: binary_trees.cc  malloc_bench.cc  run_benchmark.c  run_benchmark.cc  run_benchmark.h  trivialre.h  trivialre_test.cc  unwind_bench.cc
cmake/: CheckNoFPByDefault.cmake  DefineArchVariables.cmake  DefineTargetVariables.cmake  FindObjcopyWithWeaken.cmake  GPerftoolsAddTarget.cmake  PCFromUContext.cmake  config.h.in  tcmalloc.h.in
doc/: cpu_profiler.html  cpuprofile.html  heap_checker.html  heap_profiler.html  heapprofile.html  index.html  pprof.see_also  pprof_remote_servers.html  tcmalloc.html
docs/: Makefile  Makefile.am  cpuprofile-fileformat.adoc  cpuprofile-fileformat.html  cpuprofile-fileformat.md  cpuprofile.adoc  cpuprofile.html  cpuprofile.md  heap_checker.html  heap_checker.md  heap_profiler.md  heapprofile.adoc  heapprofile.html  heapprofile.md  index.html  index.md  pageheap.dot  pprof_integration.adoc  pprof_remote_servers.html  pprof_remote_servers.md  readme.md  tcmalloc.adoc  tcmalloc.html  tcmalloc.md
docs/dots/: README
docs/html/: cpu_profiler.html  heap_checker.html  heap_profiler.html  tcmalloc.html
generic-config/: config.h
m4/: ac_have_attribute.m4  acx_nanosleep.m4  acx_pthread.m4  install_prefix.m4  libtool.m4  libtool.patch  pc_from_ucontext.m4  program_invocation_name.m4
src/: addressmap-inl.h  central_freelist.cc  central_freelist.h  check_address-inl.h  common.cc  common.h  config.h.in  config_for_unittests.h  debugallocation.cc  emergency_malloc.cc  emergency_malloc.h  emergency_malloc_for_stacktrace.cc  free_list.cc  free_list.h  gen_getpc.rb  getpc-inl.h  getpc.h  guarded_page_allocator.cc  guarded_page_allocator.h  heap-checker-bcad.cc  heap-checker-stub.cc  heap-checker.cc  heap-profile-stats.h  heap-profile-table.cc  heap-profile-table.h  heap-profiler-inl.h  heap-profiler.cc  hugetlb_mmap_malloc.cc  internal_logging.cc  internal_logging.h  internal_spinlock.h  libbacktrace_api.h  libc_override.h  libc_override_aix.h  libc_override_gcc_and_weak.h  libc_override_glibc.h  libc_override_osx.h  libc_override_redefine.h  linked_list.h  malloc_backtrace.cc  (+69 more)
src/base/: atomicops-internals-arm-gcc.h  atomicops-internals-arm-generic.h  atomicops-internals-arm-v6plus.h  atomicops-internals-gcc.h  atomicops-internals-linuxppc.h  atomicops-internals-macosx.h  atomicops-internals-mips.h  atomicops-internals-windows.h  atomicops-internals-x86-msvc.h  atomicops-internals-x86.cc  atomicops-internals-x86.h  atomicops.h  basictypes.h  cleanup.h  commandlineflags.h  cycleclock.h  dynamic_annotations.c  dynamic_annotations.cc  dynamic_annotations.h  elf_mem_image.cc  elf_mem_image.h  elfcore.c  elfcore.h  environ.h  for_each_line.h  function_ref.h  generic_writer.cc  generic_writer.h  googleinit.h  linux_syscall_support.h  linuxthreads.c  linuxthreads.cc  linuxthreads.h  logging.cc  logging.h  low_level_alloc.cc  low_level_alloc.h  memmap.h  mutex.cc  mutex.h  (+22 more)
src/google/: heap-checker.h  heap-profiler.h  malloc_extension.h  malloc_extension_c.h  malloc_hook.h  malloc_hook_c.h  malloc_interface.h  profiler.h  stacktrace.h  tcmalloc.h.in
src/gperftools/: heap-checker.h  heap-profiler.h  malloc_extension.h  malloc_extension_c.h  malloc_hook.h  malloc_hook_c.h  nallocx.h  profiler.h  stacktrace.h  tcmalloc.h  tcmalloc.h.in
src/solaris/: libstdc++.la
src/tests/: addressmap_unittest.cc  atomicops_unittest.cc  check_address_test.cc  cleanup_test.cc  current_allocated_bytes_test.cc  debugallocation_test.cc  debugallocation_test.sh  for_each_line_test.cc  frag_unittest.cc  function_ref_test.cc  generic_writer_test.cc  getpc_test.cc  guarded_page_allocator_test.cc  guarded_page_allocator_test.sh  heap-checker-death_unittest.sh  heap-checker-stub-test.cc  heap-checker_unittest.cc  heap-checker_unittest.sh  heap-profiler_unittest.cc  heap-profiler_unittest.sh  large_heap_fragmentation_unittest.cc  legacy_assertions.h  low_level_alloc_unittest.cc  malloc_extension_c_test.c  malloc_extension_c_test.cc  malloc_extension_test.cc  malloc_hook_test.cc  markidle_unittest.cc  maybe_threads_unittest.sh  memalign_unittest.cc  min_per_thread_cache_size_test.cc  mmap_hook_test.cc  packed-cache_test.cc  page_heap_test.cc  pagemap_unittest.cc  proc_maps_iterator_test.cc  profile-handler_unittest.cc  profiledata_unittest.cc  profiler_unittest.cc  profiler_unittest.sh  (+16 more)
src/windows/: CMakeLists.txt  TODO  addr2line-pdb.c  auto_testing_hook.h  config.h  get_mangled_names.cc  ia32_modrm_map.cc  ia32_opcode_map.cc  mingw.h  mini_disassembler.cc  mini_disassembler.h  mini_disassembler_types.h  nm-pdb.c  override_functions.cc  patch_functions.cc  port.cc  port.h  preamble_patcher.cc  preamble_patcher.h  preamble_patcher_test.cc  preamble_patcher_with_stub.cc  shortproc.asm  system-alloc.cc  vc7and8.def
src/windows/google/: tcmalloc.h  tcmalloc.h.in
src/windows/gperftools/: tcmalloc.h  tcmalloc.h.in
trunk/: ChangeLog  README  configure.ac
trunk/doc/: cpuprofile.html
trunk/src/: debugallocation.cc  heap-checker.cc  heap-profile-table.cc  heap-profiler.cc  malloc_extension.cc  malloc_hook.cc  maybe_threads.cc  memory_region_map.h  pprof  stacktrace_x86-inl.h  tcmalloc.cc
vsprojects/: common.vcxproj.props  config.h
vsprojects/addr2line-pdb/: addr2line-pdb.vcproj  addr2line-pdb.vcxproj  addr2line-pdb.vcxproj.filters
vsprojects/addressmap_unittest/: addressmap_unittest.vcproj  (+2 more)
(+87 files in other folders)
